<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/save_cpu"
    android:icon="@drawable/ic_save"
    android:title="Save CPU"
    app:showAsAction="ifRoom"/>
</menu>