<resources>
    <string name="app_name">Comparty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COMPARTY</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Build</string>
    <string name="menu_slideshow">Add to Build</string>

    <string name="motherboard">Motherboard</string>
    <string name="cases">Cases</string>
    <string name="power_supply">Power Supply</string>
    <string name="gpu">GPU</string>
    <string name="ram">RAM</string>
    <string name="cpu">CPU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addition">Add Item to Build</string>
</resources>